fix featured articles spacing on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -70,14 +70,17 @@ hr {
 
 .card-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
-  margin: 40px 0;
+  margin-top: 30px;
+  margin-bottom: 40px;
 }
 
 .project-card.mdl-card {
   width: 256px;
   height: 256px;
   background: #3E4EB8;
+  margin: 10px 10px 0;
 }
 .project-card > .mdl-card__actions {
   border-color: rgba(255, 255, 255, 0.2);
